compile to PDF with bad path definition.

--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
@@ -8,56 +8,415 @@
 <meta name="author" content="Joby M. Anthony III &lt;jmanthony1@liberty.edu&gt;, Carson W. Farmer">
 <title>Final Project</title>
 <style>
-/*! Copyright (C) 2019, TomTom (http://tomtom.com).
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *   http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-/* Extension of the AsciiDoctor CSS for AsciiDoxy.
- * Adding:
- * - Floating multipage navigation.
- */
-@import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";
-@import "https://cdn.jsdelivr.net/gh/asciidoctor/asciidoctor@2.0/data/stylesheets/asciidoctor-default.css";
+/* @media screen {
+    @import "https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic%7CNoto+Serif:400,400italic,700,700italic%7CDroid+Sans+Mono:400,700";
+    @import "https://cdn.jsdelivr.net/gh/asciidoctor/asciidoctor@2.0/data/stylesheets/asciidoctor-default.css";
+} */
 
-/* Multipage navigation */
-div#navigation {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
+/* define custom styles */
+body {
+    /* width: 90%; */
+    margin-left: 2%;
+    margin-right: 2%;
+    font-family: 'Times New Roman';
+    font-style: normal;
+    font-size: 10pt;
+    /* color: black; */
 }
-div#navigation table {
-    margin-bottom: 0;
+#header {
+    font-family: Arial;
+    font-style: normal;
+    font-size: 11pt;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    line-height: normal;
+    line-height-step: 12pt;
 }
-@media screen and (min-width: 768px) {
-    body.toc2 div#navigation {
-        left: 15em;
-    }
-    body.toc2.toc-right div#navigation {
-        right: 15em;
-    }
+#author {
+    font-size: 10pt;
+    text-transform: capitalize;
 }
-@media screen and (min-width: 1280px) {
-    body.toc2 div#navigation {
-        left: 20em;
-    }
-    body.toc2.toc-right div#navigation {
-        right: 20em;
-    }
+.affiliations {
+    font-family: Arial;
+    font-style: normal;
+    font-size: 10pt;
+    font-weight: normal;
+    color: black;
+    text-align: center;
 }
-
+/* h1 {
+    font-size: 11pt;
+    text-align: center;
+    line-break: loose;
+} */
+#content {
+    /* column-count: 2;
+    column-gap: 0.25in;
+    column-width: calc(7.25/2)in;
+    column-fill: balance; */
+    orphans: 3;
+    widows: 1;
+    display: flexbox;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+/* .sect1, #preamble { */
+/* .sect1 {
+    column-count: 2;
+    column-fill: balance;
+    column-gap: 0.25in;
+    break-before: auto;
+    break-inside: avoid-column;
+    line-break: normal;
+} */
+.sect1+.sect1 {
+    border-top: none;
+}
+.sect2 {
+    break-before: auto;
+    break-inside: avoid;
+    break-inside: auto;
+}
+h2,h3,h4,h5 {
+    font-family: Arial;
+    /* font-style: normal; */
+    font-weight: bold;
+    /* color: black; */
+    text-transform: uppercase;
+    /* page-break-after: avoid; */
+    /* page-break-inside: avoid; */
+    break-before: avoid;
+    break-inside: avoid;
+}
+/* h1+p, h2+p, h3+p {
+    page-break-before: avoid;
+} */
+/* span#author.author{
+    text-align: center;
+} */
+/* h2 {
+    font-size: 10pt;
+    break-before: avoid;
+} */
+h3 {
+    /* font-size: 10pt; */
+    text-transform: capitalize;
+}
+.abstract blockquote {
+    padding:0;
+    margin:0;
+    font-style: italic;
+    text-align: justify;
+    text-indent: 0.25in;
+}
+p {
+    text-align: justify;
+    text-indent: 0.25in;
+    /* break-inside: auto; */
+}
+a {
+    color: blue;
+}
+/* table, figure {
+    break-inside: avoid;
+    break-inside: avoid-column;
+    break-inside: ;
+    page-break-inside: avoid;
+} */
+img {
+    width: 70.7%;
+    align-self: center;
+}
+.imageblock > .title {
+    font-size: 9pt;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.floatnumber {
+    font-family: Arial;
+    font-size: 10pt;
+    font-weight: bold;
+}
+.stemblock > .content {
+    font-family: "Cambria Math";
+    font-size: 12pt;
+    text-align: center;
+    line-break: auto;
+}
+.exampleblock > .title {
+    font-size: 9pt;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.tableblock > .title {
+    font-size: 9pt;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.listingblock > .title {
+    font-size: 9pt;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.listingblock .content {
+    display: block;
+    box-sizing: border-box;
+}
+/* header formatting */
+table {
+    width: 100%;
+}
+td {
+    vertical-align: top;
+}
+.d1 {
+    text-align: left;
+}
+.d2 {
+    text-align: center;
+}
+.d3 {
+    text-align: right;
+}
+.copy {
+    visibility: hidden;
+}
+.copy, .d3 {
+    white-space: nowrap;
+}
+.header-text {
+    /* margin-top: 0.5in;
+    margin-right: 0.5in; */
+    font-family: Arial;
+    font-style: normal;
+    font-size: 10pt;
+    font-weight: bold;
+    /* color: black; */
+}
+.header-text-alt {
+    /* margin-top: 0.5in;
+    margin-right: 0.5in; */
+    font-family: Arial;
+    font-style: normal;
+    font-size: 16pt;
+    font-weight: bold;
+    /* color: black; */
+}
+.title-author-affil {
+    font-family: Arial;
+    font-style: normal;
+    font-size: 10pt;
+    font-weight: normal;
+}
+.title {
+    font-size: 11pt;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.author {
+    font-weight: bold;
+}
+/* footer formatting */
+#footer-text {
+    width: 100%;
+    font-family: "Times New Roman";
+    font-style: normal;
+    font-size: 10pt;
+    font-weight: normal;
+    display: table;
+}
+
+/* define custom format for media */
+@media print {
+    @page {
+        size: letter;
+        margin-top: 0.5in;
+        /* margin-bottom: 1in; */
+        margin-left: 0.5in;
+        margin-right: 0.5in;
+    }
+    body {
+        width: 7.5in;
+        height: 9.5in;
+        /* size: letter; */
+        /* margin: 0.5in 1in 0.5in 0.5in; */
+        /* margin-top: 0.5in;
+        margin-bottom: 1in;
+        margin-left: 0.5in;
+        margin-right: 0.5in; */
+        /* font settings went here */
+        page-break-before: always;
+        page-break-inside: auto;
+        line-height: 12pt;
+        line-break: auto;
+        /* line-height-step: 12pt; */
+        /* column-count: 2;
+        column-fill: balance;
+        column-gap: 0.25in;
+        display: flexbox;
+        flex-direction: column; */
+        /* flex-flow: wrap; */
+        /* break-inside: avoid-column; */
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* flex-wrap: wrap; */
+        /* break-inside: avoid-column; */
+    }
+    #content {
+        /* width: 7.5in;
+        height: 9.5in; */
+        /* margin-top: 1in; */
+        /* margin-bottom: 2in; */
+        /* margin-left: 0.5in; */
+        /* margin-right: 0.5in; */
+        column-count: 1;
+        /* column-gap: 0.25in;
+        column-width: calc(7.25/2)in; */
+        column-fill: balance;
+        /* orphans: 3;
+        display: flexbox;
+        flex-direction: column;
+        flex-wrap: wrap; */
+    }
+    img {
+        /* width: 70.7%;
+        align-items: center; */
+        break-inside: avoid;
+    }
+    .imageblock > .title {
+        /* font-size: 9pt;
+        text-transform: uppercase; */
+        break-inside: avoid;
+    }
+    .figgynumber {
+        /* font-family: Arial;
+        font-size: 10pt;
+        font-weight: bold; */
+        break-inside: avoid;
+    }
+    .stemblock > .content {
+        /* font-family: "Cambria Math";
+        font-size: 12pt;
+        text-align: center;
+        line-break: strict; */
+        break-inside: avoid;
+    }
+    #footer-text {
+        /* size: letter; */
+        width: 7.5in;
+        /* height: 11in; */
+        /* margin-top: 0in;
+        margin-bottom: 0in; */
+        /* margin-left: 0.5in;
+        margin-right: 0.5in; */
+        /* font-family: "Times New Roman";
+        font-style: normal;
+        font-size: 10pt;
+        font-weight: bold; */
+        position: fixed;
+        bottom: 0;
+        /* left: 50%; */
+    }
+}
 </style>
+<!-- We could also include Javascript
+    for example in this document. -->
+
+<!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script type="text/javascript" id="MathJax-script" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml-full.js">
+</script> -->
+
+<!-- maybe insert MathJax script here -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script> -->
+<script type="text/javascript">
+MathJax = {
+    loader: {load: ["input/tex", "output/HTML-CSS"]},
+    "HTML-CSS": {
+        // scale: 50,
+        minScaleAdjust: 10,
+        preferredFont: "TeX",
+        linebreaks: {
+            automatic: true,
+            width: "container"
+        },
+    },
+    displayAlign: "center",
+    styles: {
+        "@media print": {
+            "HTML-CSS": {
+                linebreaks: {
+                    automatic: true,
+                    width: "3.625in"
+                }
+            }
+        }
+    }
+};
+</script>
+
+<!-- ^ formatting | content v -->
+
+<!-- page numbers -->
+<script type="text/javascript">
+    // window.onload = addPageNumbers;
+    window.onbeforeprint = addPageNumbers;
+
+    function addPageNumbers() {
+        // A4 pageheight: 842px for 72dpi, 1123px for 96dpi
+        // letter pageheight: 791px for 72dpi, 1054px for 96dpi
+        // var totalPages = Math.ceil(document.body.scrollHeight / 1054)/2 - 1;
+        var totalPages = 14;
+        for (var i = 1; i <= totalPages; i++) {
+            var pageNumberDiv = document.createElement("div");
+            // var pageNumber = document.createTextNode("Page " + i + " of " + totalPages);
+            var pageNumber = document.createTextNode(i);
+            pageNumberDiv.style.position = "absolute";
+            //297mm A4 pageheight; 0,5px unknown needed necessary correction value; additional wanted 40px margin from bottom(own element height included)
+            // pageNumberDiv.style.top = "calc((" + i + " * (297mm - 0.5px)) - 40px)";
+            pageNumberDiv.style.top = "calc((" + i + " * (11in)) - (" + (i) + "* (" + Math.sqrt(2)/2 + "in - " + (1 - Math.sqrt(2)/2)/2 + "px) + 16px)";
+            pageNumberDiv.style.height = "16px";
+            pageNumberDiv.appendChild(pageNumber);
+            document.body.insertBefore(pageNumberDiv, document.getElementById("content"));
+            // pageNumberDiv.style.left = "calc(100% - (" + pageNumberDiv.offsetWidth + "px + 20px))";
+            pageNumberDiv.style.left = "calc(50% - (" + pageNumberDiv.offsetWidth + "px + 0px))";
+        }
+    }
+</script>
+
+<!-- header contents -->
+<div class="header-text">
+    <!-- https://leanpub.com/awesomeasciidoctornotebook/read#awesome-asciidoctor-adding-custom -->
+    <!-- We can use document attributes: -->
+    <!-- <p style="text-align:center">{page-number}</p>
+    <div style="text-align:right">&copy; 2019 by ASME</div> -->
+    <div style="text-align:right"></div>
+    <div style="text-align:right">ENGR 527/727-001: Advanced Mechanics of Materials</div>
+    <div style="text-align:right">Final Project</div>
+    <div style="text-align:right">ENGR 527/727-001</div>
+    <div style="text-align:right">January 10-May 6, Lynchburg, VA, USA</div>
+    <div style="text-align:right"><br></div>
+    <div style="text-align:right", class="header-text-alt"><br>ENGR527/727-001</div>
+    <div style="text-align:right"><br><br></div>
+</div>
+
+<!-- contents for title, author(s), and affiliation(s) -->
+<div class="title-author-affil">
+    <!-- https://leanpub.com/awesomeasciidoctornotebook/read#awesome-asciidoctor-adding-custom -->
+    <!-- We can use document attributes: -->
+    <!-- <p style="text-align:center">{page-number}</p>
+    <div style="text-align:right">&copy; 2019 by ASME</div> -->
+    <div style="text-align:center", class="title">Final Project<br><br><br></div>
+    <div style="text-align:center", class="author">
+        <author>
+            <personname>
+            Joby M. Anthony III &lt;jmanthony1@liberty.edu&gt;, Carson W. Farmer<br><br>
+            </personname>
+        </author>
+    </div>
+    <div style="text-align:center">PhD Students<br><br></div>
+</div>
 </head>
 <body class="article">
 <div id="content">
@@ -110,5 +469,31 @@ MathJax.Hub.Register.StartupHook("AsciiMath Jax Ready", function () {
 })
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.9/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
+
+
+<!-- ^ formatting | content v -->
+
+<div id="footer-text">
+    <!-- https://leanpub.com/awesomeasciidoctornotebook/read#awesome-asciidoctor-adding-custom -->
+    <!-- We can use document attributes: -->
+    <!-- <p style="text-align:center">{page-number}</p>
+    <div style="text-align:right">&copy; 2019 by ASME</div> -->
+    <table>
+        <tr>
+            <td class="d1">
+                <!-- left -->
+                <div class="copy">&copy; 2019 by ASME</div>
+            </td>
+            <td class="d2">
+                <!-- center text that is long enough to force a word wrap! -->
+                <!-- <div id="pageFooter"></div> -->
+            </td>
+            <!-- <td class="d3">right text</td> -->
+            <td class="d3">
+                &copy; 2019 by ASME
+            </td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
