--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
@@ -436,7 +436,13 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <div class="sect1">
 <h2 id="sec-nomenclature">1. Nomenclature</h2>
 <div class="sectionbody">
-
+<div id="eq-nomenclature" class="stemblock">
+<div class="content">
+\[\begin{align}
+    \tau &amp;= \text{shear stress}\    \theta &amp;= \text{angular displacement}\    a &amp;= \text{height of the hexagonal cross section}\    b &amp; = \text{base of rectangular cross section}\    h &amp;= \text{height of rectangular cross section}\    F &amp;= \text{force applied at the end of the handle}\    M &amp;= \text{resultant moment from the force applied to the handle}\    T &amp;= \text{torque applied to the shaft}\    y &amp;= \text{distance from neutral axis for bending stress}\    G &amp;= \text{shear modulus}
+\end{align}\]
+</div>
+</div>
 </div>
 </div>
 <div class="sect1">
@@ -456,9 +462,7 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <div class="sect1">
 <h2 id="sec-synthesis">4. Sythesis of the Design</h2>
 <div class="sectionbody">
-<div class="paragraph">
-<p>\(\sigma_y = \frac{1}{2}\)</p>
-</div>
+
 </div>
 </div>
 <div class="sect1">
@@ -474,10 +478,8 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <div class="paragraph">
 <p>From Table 6.2 in [<a href="#uguralAdvancedMechanicsMaterials2019">1</a>], the equations for the maximum shear stress, \(\tau_A\), and angular deflection, \(\theta\),  for a hexagonal cross section similar <a href="#Fig-1">[Fig-1]</a> to are provided:</p>
 </div>
-<div class="imageblock">
-<div class="content">
-<img src="C:/Users/cfarmer6/Documents/GitHub/WeCANDoIt/Asciidoc/Document/make/build/intermediate/ENGR-527_727-WeCANDoIt-Final_Project/images/shaft_cross_section.png" alt="shaft cross section">
-</div>
+<div class="paragraph">
+<p>INCLUDE IMAGE OF THE HEXAGONAL CROSS SECTION</p>
 </div>
 <div id="eq-hex-cross-section" class="stemblock">
 <div class="content">
@@ -490,9 +492,8 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <p>where \(T\) is the applied torque, \(a\) is the height of the hexagon, and \(G\) is the modulus of rigidity. From the geometry of the shaft, \(a\) is equal to 1 inch. For AISI 316, the shear modulus is 78GPa. For an applied torque of 220lbf·in, the maximum shear stress is predicted to be 8.646MPa which closely matches the FEA results. Furthermore, the maximum predicted deflection is 2.05 milliradians. The delfection of the rod predicted via this equation is not comparable to the FEA results since the effects of the fly wheel prevent some of the deflection that would be experienced by the shaft.</p>
 </div>
 </div>
-</div>
-<div class="sect2">
-<h3 id="_handle">5.2. Handle</h3>
+<div class="sect3">
+<h4 id="_handle">5.1.2. Handle</h4>
 <div class="paragraph">
 <p>The handle of the mechanism is subject to a moment produced by the force applied to the handle. Since the cross section of the bar is rectangular, the standard equation for bending applied. At the end of the handle a force of 20 pounds force is applied. The handle has a length of 11 inches with a cross section of 0.75 inches by 0.6 inches. Using the equation for bending stress at point A on the cross section:</p>
 </div>
@@ -507,8 +508,8 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <p>where \(M = 20\text{lb}_f*10.125\text{inch} = 202.5\text{lb}_f\cdot\text{inch}\), \(y = 0.375\text{inch}\), and \(I = \frac{1}{12}(0.6\text{inch})(0.75\text{inch})^3\). This gives a maximum normal stress of 24.8MPa. Once again, this closely matches the results determined in the FEA analysis near the point of interest.</p>
 </div>
 </div>
-<div class="sect2">
-<h3 id="_conclusions">5.3. Conclusions</h3>
+<div class="sect3">
+<h4 id="_conclusions">5.1.3. Conclusions</h4>
 <div class="paragraph">
 <p>Within the brief analytical work conducted, both the shear stress in the shaft and the maximum normal stress are both well below the limits of the material. For the fly wheel, a FEA approach is employed due to the complex geometry of the contact surface with the can. The checks provided by the analytical work confirm that the FEA results are close to the predicted values.</p>
 </div>
@@ -516,14 +517,15 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <p>INCLUDE FIGURE OF THE HANDLE</p>
 </div>
 </div>
+</div>
 <div class="sect2">
-<h3 id="_finite_element_analysis">5.4. Finite Element Analysis</h3>
+<h3 id="_finite_element_analysis">5.2. Finite Element Analysis</h3>
 
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="sec-conclusions">6. Conclustions</h2>
+<h2 id="sec-conclusions">6. Conclusions</h2>
 <div class="sectionbody">
 
 </div>
