--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
@@ -438,9 +438,9 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <div class="sectionbody">
 <div id="eq-nomenclature" class="stemblock">
 <div class="content">
-\[\begin{align}
-    \tau &amp;= \text{shear stress}\    \theta &amp;= \text{angular displacement}\    a &amp;= \text{height of the hexagonal cross section}\    b &amp; = \text{base of rectangular cross section}\    h &amp;= \text{height of rectangular cross section}\    F &amp;= \text{force applied at the end of the handle}\    M &amp;= \text{resultant moment from the force applied to the handle}\    T &amp;= \text{torque applied to the shaft}\    y &amp;= \text{distance from neutral axis for bending stress}\    G &amp;= \text{shear modulus}
-\end{align}\]
+\[\begin{align*}
+    \tau &amp;= \text{shear stress}\\    \theta &amp;= \text{angular displacement}\\    a &amp;= \text{height of the hexagonal cross section}\\    b &amp; = \text{base of rectangular cross section}\\    h &amp;= \text{height of rectangular cross section}\\    F &amp;= \text{force applied at the end of the handle}\\    M &amp;= \text{resultant moment from the force applied to the handle}\\    T &amp;= \text{torque applied to the shaft}\\    y &amp;= \text{distance from neutral axis for bending stress}\\    G &amp;= \text{shear modulus}
+\end{align*}\]
 </div>
 </div>
 </div>
