Trying to get figures rescaled

--- a/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
+++ b/Asciidoc/Document/ENGR-527_727-WeCANDoIt-Final_Project.html
@@ -446,7 +446,7 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <h2 id="_introduction">2. Introduction</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>As the consumption of soda continues to increase internationally, landfills are being overwhelmed by the number of empty cans produced. To counteract the volumetric deman of waste faciliti</p>
+<p>As the consumption of soda continues to increase internationally, landfills are being overwhelmed by the number of empty cans produced. To counteract the volumetric deman of waste facilities, the</p>
 </div>
 </div>
 </div>
@@ -454,9 +454,9 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <h2 id="sec-development">3. Development of Engineering Specifications</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>To develop the specifications for the design, several considerations were made to ensure that the design would be constructed effectively and within the limits of human strength. First, the average pulling force for a human was determined to be 20 lbf which is consistent with NASA standards [<a href="#christensenman">1</a>]. In an effort to reduce the environmental impact of the design, the additional constraint of purchasing as many parts as possible without requiring custom fabricated parts. In the final design, less than half of the parts required were custom designed. The remainder were able to be purchased from McMaster-Carr. To determine the required crushing force for an aluminum beverage can, six uniaxial compression tests were conducted and the results are shown in REFERENCE CAN CRUSHING FIGURE. The avereage maximum crushing force was found to be approximately 1.3kN to reduce the can to 20% of the original volume. For the dimensions of an aluminum beverage can, the can was considered to have an original height of 157mm and to achieve 80% reduction in volume, the can would need to be deformed to a thickness of 31.4mm. The dimensions of the can were determined via measurements taken from the beverage cans used in the compression tests. Furthermore, from the project instructions, the final design was required to have te ability to be either mechanically or electrically driven. Additionally, the requirement of having the crushing mechanism automatically reload was added to improve the total throughput of the cans to be crushed. The metric for the human force and crushing force are determined via mechanical analysis. For the material selection, the commeercially listed for the components will be used in the design.</p>
+<p>To develop the specifications for the design, several considerations were made to ensure that the design would be constructed effectively and within the limits of human strength. First, the average pulling force for a human was determined to be 20 lbf which is consistent with NASA standards [<a href="#christensenman">christensenman</a>]. In an effort to reduce the environmental impact of the design, the additional constraint of purchasing as many parts as possible without requiring custom fabricated parts. In the final design, less than half of the parts required were custom designed. The remainder were able to be purchased from McMaster-Carr. To determine the required crushing force for an aluminum beverage can, six uniaxial compression tests were conducted and the results are shown in <a href="#fig-can_plot">Fig. 1-1</a>. The avereage maximum crushing force was found to be approximately 1.3kN to reduce the can to 20% of the original volume. For the dimensions of an aluminum beverage can, the can was considered to have an original height of 157mm and to achieve 80% reduction in volume, the can would need to be deformed to a thickness of 31.4mm. The dimensions of the can were determined via measurements taken from the beverage cans used in the compression tests. Furthermore, from the project instructions, the final design was required to have te ability to be either mechanically or electrically driven. Additionally, the requirement of having the crushing mechanism automatically reload was added to improve the total throughput of the cans to be crushed. The metric for the human force and crushing force are determined via mechanical analysis. For the material selection, the commeercially listed for the components will be used in the design.</p>
 </div>
-<div id="fig-can_plot" class="imageblock">
+<div id="fig-can_plot" class="imageblock text-center">
 <div class="content">
 <img src="./ENGR-527_727-WeCANDoIt-Final_Project/compression_results.png" alt="compression results">
 </div>
@@ -468,11 +468,11 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <h2 id="sec-synthesis">4. Sythesis of the Design</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>In creating the final design of the system, several commercially and custom fabricated can crushing solutions were considered. While the common handle driven can crushing system as shown in xref:[fig-handle_fbd]</p>
+<p>In creating the final design of the system, several commercially and custom fabricated can crushing solutions were considered. While the common handle driven can crushing system as shown in <a href="#fig-handle_fbd">Fig. 1-2</a></p>
 </div>
 <div id="fig-handle_fbd" class="imageblock">
 <div class="content">
-<img src="./ENGR-527_727-WeCANDoIt-Final_Project/handle.png" alt="handle" width="284" height="300">
+<img src="./ENGR-527_727-WeCANDoIt-Final_Project/handle.png" alt="handle" width="340" height="600">
 </div>
 <div class="title"><span class="figgynumber">Figure 1-2. </span>FBD for the handle to determine the maximum bending stress at the connection.</div>
 </div>
@@ -496,7 +496,7 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 </div>
 <div id="fig-5-problem_statement" class="imageblock">
 <div class="content">
-<img src="./ENGR-527_727-WeCANDoIt-Final_Project/1-shaft_cross_section.png" alt="1 shaft cross section">
+<img src="./ENGR-527_727-WeCANDoIt-Final_Project/shaft_cross_section.png" alt="shaft cross section">
 </div>
 <div class="title"><span class="figgynumber">Figure 1-3. </span>Figure Caption</div>
 </div>
@@ -553,7 +553,7 @@ As the consumption of sugary carbonated drinks has increased in recent years, an
 <h2 id="_bibliography">Bibliography</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a id="christensenman"></a>[1] J. M. Christensen, J. W. McBarron, J. T. McConville, W. R. Pogue, R. C. Williges, and W. E. Woodson, “Man-Systems Integration Standards NASA-STD-3000, Volume II Revision B, July 1995.”</p>
+<p><a id="christensenman"></a>[1] christensenman</p>
 </div>
 <div class="paragraph">
 <p><a id="uguralAdvancedMechanicsMaterials2019"></a>[2] A. Ugural and S. Fenster, <em>Advanced Mechanics of Materials and Applied Elasticity (International Series in the Physical and Chemical Engineering Sciences)</em>, Sixth. Pearson, 2019.</p>
